* remove double definitions, linker errors occured: says already defined..

--- a/trunk/plugins/_core/Makefile.am
+++ b/trunk/plugins/_core/Makefile.am
@@ -87,9 +87,9 @@ _core_la_SOURCES = \
  toolbar_container.cpp \
  toolbar_msgedit.cpp \
  toolbar_textedit.cpp \
- msgview_menu.cpp \
- msgview_menu.cpp \
- toolbar_textedit.cpp
+ msgview_menu.cpp 
+
+
 
 SUBDIRS=pict styles jisp GPL-Icons emoticons_prebuilt
 
