--- a/branches/branch-playground/plugins/transparent/transparent.vcproj
+++ b/branches/branch-playground/plugins/transparent/transparent.vcproj
@@ -446,7 +446,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -i $(InputName).h -o $(InputDir)$(InputName).cpp&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -455,7 +455,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -i $(InputName).h -o $(InputDir)$(InputName).cpp&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
