--- a/branches/branch-playground/plugins/msn/msn.vcproj
+++ b/branches/branch-playground/plugins/msn/msn.vcproj
@@ -859,7 +859,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -869,7 +869,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -882,7 +882,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -892,7 +892,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -905,7 +905,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -915,7 +915,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
