--- a/branches/branch-playground/plugins/shortcuts/shortcuts.vcproj
+++ b/branches/branch-playground/plugins/shortcuts/shortcuts.vcproj
@@ -577,7 +577,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -586,7 +586,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -600,7 +600,7 @@
 					<Tool
 						Name="VCCustomBuildTool"
 						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
@@ -609,7 +609,7 @@
 					>
 					<Tool
 						Name="VCCustomBuildTool"
-						CommandLine="%qtdir%\bin\uic.exe $(InputPath) -o $(InputDir)ui_$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic.exe $(InputPath) -o ui_$(InputName).cpp&#x0D;&#x0A; %qtdir%\bin\moc.exe&#x0D;&#x0A;"
+						CommandLine="%qtdir%\bin\uic3.exe $(InputPath) -o $(InputDir)$(InputName).h&#x0D;&#x0A;%qtdir%\bin\uic3.exe $(InputPath) -o $(InputName).cpp&#x0D;&#x0A;%qtdir%\bin\moc.exe $(InputDir)\$(InputName).h -o $(InputDir)\moc_$(InputName).cpp"
 						Outputs="$(InputDir)$(InputName).h;$(InputDir)$(InputName).cpp"
 					/>
 				</FileConfiguration>
